@@ -2,20 +2,20 @@ package hexlet.code.controller;
 
 import hexlet.code.dto.AlertType;
 import hexlet.code.dto.FlashMessage;
+import hexlet.code.dto.UrlListPage;
 import hexlet.code.dto.UrlPage;
 import hexlet.code.dto.UrlRecord;
 import hexlet.code.exception.EntityAlreadyExistException;
-import hexlet.code.exception.NotFoundException;
 import hexlet.code.exception.UrlParsingException;
 import hexlet.code.mapper.UrlsMapper;
 import hexlet.code.model.Urls;
 import hexlet.code.repository.UrlsRepository;
 import hexlet.code.util.UrlUtil;
 import io.javalin.http.Context;
+import io.javalin.http.InternalServerErrorResponse;
+import io.javalin.http.NotFoundResponse;
 import lombok.extern.slf4j.Slf4j;
 
-import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -25,23 +25,16 @@ import static io.javalin.rendering.template.TemplateUtil.model;
 public class UrlsController {
 
     public static void index(Context ctx) {
-        // TODO remove it later
-        List<UrlRecord> urls = new ArrayList<>(List.of(
-                new UrlRecord(1, "example.com", LocalDate.of(2025, 8, 21), 200),
-                new UrlRecord(2, "google.com", LocalDate.of(2025, 8, 20), 200),
-                new UrlRecord(3, "broken-site.com", LocalDate.of(2025, 8, 19), 404)
-        ));
-        List<UrlRecord> dbUrls = Collections.emptyList();
+        List<UrlRecord> urls = Collections.emptyList();
         try {
-            dbUrls = UrlsRepository.findAll().stream()
+            urls = UrlsRepository.findAll().stream()
                     .map(UrlsMapper::mapToRecord)
                     .toList();
         } catch (Exception e) {
             log.error("Exception while retrieving urls data from db");
         }
-        urls.addAll(dbUrls);
-        UrlPage page = new UrlPage(urls);
-        ctx.render("page/urls.jte", model("page", page));
+        UrlListPage page = new UrlListPage(urls);
+        ctx.render("page/url_list.jte", model("page", page));
     }
 
     public static void create(Context ctx) {
@@ -77,18 +70,19 @@ public class UrlsController {
     }
 
     public static void findById(Context ctx) {
-        String result = "";
         try {
             Long urlsId = ctx.pathParamAsClass("id", Long.class).get();
             log.info("Get urls by id: {}", urlsId);
             Urls urls = UrlsRepository.findById(urlsId)
-                    .orElseThrow(() -> new NotFoundException("Urls entity with id " + urlsId + " not found!"));
-            result = urls.toString();
+                    .orElseThrow(() -> new NotFoundResponse("Urls entity with id " + urlsId + " not found!"));
+            UrlPage page = new UrlPage(UrlsMapper.mapToRecord(urls));
+            ctx.render("page/url.jte", model("page", page));
+        } catch (NotFoundResponse e) {
+            log.error("NotFoundResponse exception!", e);
+            throw e;
         } catch (Exception e) {
-            log.error("Exception while retrieving urls entity by id");
-            result = e.getMessage();
-        } finally {
-            ctx.result(result);
+            log.error("Exception while retrieving urls entity by id", e);
+            throw new InternalServerErrorResponse("Ошибка сервера!");
         }
     }
 }
